Extend notifications.mojom for expandable notifications.

- Add |TOGGLE_EXPANSION| value to ArcNotificationEvent enum.
- Add |expand_state| value to ArcNotificationData.

BUG=703989

Review-Url: https://codereview.chromium.org/2765923003
Cr-Commit-Position: refs/heads/master@{#460062}

Former-commit-id: c787104b181d6ca1356c1f0b82257ed5a62ad633