ui/arc/notification/arc_custom_notification_item.cc
@@ -101,6 +101,7 @@ void ArcCustomNotificationItem::UpdateWithArcNotificationData(
   SetNotification(std::move(notification));
 
   pinned_ = rich_data.pinned;
+  expand_state_ = data->expand_state;
 
   if (!data->snapshot_image || data->snapshot_image->isNull()) {
     snapshot_ = gfx::ImageSkia();
